# GameOverlay

./: PATTERNS_AND_OFFSETS_DOCUMENTATION.md  QUICK_REFERENCE.md  README.md
CppEquivalent/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  Pattern.cpp  Pattern.hpp  PatternFinder.cpp  PatternFinder.hpp  README.md  SafeMemoryHandle.cpp  SafeMemoryHandle.hpp  UsageExample.cpp  build_test.sh
GameOffsets/: PatternDocumentationHelper.cs
GameOffsets/cpp/: .gitignore  CMakeLists.txt  Makefile  Pattern.cpp  Pattern.h  README.md  StaticOffsetsPatterns.cpp  StaticOffsetsPatterns.h  example  example.cpp  test_main.cpp  test_patterns
